--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -41,3 +41,18 @@ body {
     height: 100%;
     position: absolute;
 }
+
+canvas {
+    image-rendering: optimizeSpeed;             /* Older versions of FF */
+    image-rendering: -moz-crisp-edges;          /* FF 6.0+ */
+    image-rendering: -webkit-optimize-contrast; /*/ Webkit */
+                                                /*/  (Safari now, Chrome soon) */
+    image-rendering: -o-crisp-edges;            /*/ OS X & Windows Opera (12.02+)*/
+    image-rendering: optimize-contrast;         /*/ Possible future browsers.*/
+    -ms-interpolation-mode: nearest-neighbor;   /*/ IE*/
+}
+
+canvas.character {
+    height: 160px;
+    width: 160px;
+}
