--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,58 @@
 body {
-    background: #fafafa;
+    background: #030303;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.container {
+    padding: 0;
+    margin: 0;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+    height: 100%;
+}
+
+.container h1 {
+    font-family: 'rock salt', cursive;
+    color: #ff9600;
+    font-size: 5em;
+    margin: 0;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
+#countdown {
+    font-family: 'rock salt', cursive;
+    position: absolute;
+    color: #ff9600;
+    font-size: 3em;
+    top: 10px;
+    left: 380px;
+    font-weight: bold;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
+.score {
+    font-family: 'rock salt', cursive;
+    position: absolute;
+    color: #ff9600;
+    font-size: 2em;
+    top: 10px;
+    font-weight: bold;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
+.score.p1 {
+    left: 50px;
+}
+
+.score.p2 {
+    left: 720px;
 }
 
 .hero-unit {
@@ -55,4 +106,9 @@ canvas {
 canvas.character {
     height: 160px;
     width: 160px;
+}
+
+canvas.plateau {
+    width: 800px;
+    height: 600px;
 }
